<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.orangecoastcollege.cs273.dnovasky.shippingcalculator.MainActivity"
    android:background="@drawable/shipping_background">

    <TextView
        android:id="@+id/instructionsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/instruction_text"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textIsSelectable="true"
        android:textStyle="bold"/>

    <EditText
        android:layout_below="@+id/instructionsTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/packageWeightEditText"
        android:layout_marginTop="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="32sp"
        android:textIsSelectable="true"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:singleLine="true"/>

    <TextView
        android:id="@+id/inputHintTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_hint_text"
        android:layout_below="@+id/packageWeightEditText"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/baseCostTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/base_cost_text"
        android:layout_below="@+id/inputHintTextView"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="30dp"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/addedCostTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/added_cost_text"
        android:layout_below="@+id/baseCostTextView"
        android:layout_alignLeft="@+id/baseCostTextView"
        android:layout_alignStart="@+id/baseCostTextView"
        android:paddingTop="4dp"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_cost_text"
        android:id="@+id/totalCostTextView"
        android:layout_below="@+id/addedCostTextView"
        android:layout_alignLeft="@+id/addedCostTextView"
        android:layout_alignStart="@+id/addedCostTextView"
        android:paddingTop="4dp"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/baseCurrencyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="$0.00"
        android:layout_alignBottom="@+id/baseCostTextView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="30dp"
        android:textColor="@android:color/black"
        android:textSize="18dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/addedCurrencyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="$0.00"
        android:layout_alignBottom="@+id/addedCostTextView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="30dp"
        android:textColor="@android:color/black"
        android:textSize="18dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/totalCurrencyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="$0.00"
        android:layout_alignBottom="@+id/totalCostTextView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="30dp"
        android:textColor="@android:color/black"
        android:textSize="18dp"
        android:textStyle="bold"/>

</RelativeLayout>
